<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dimen_16dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivPerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_person"
        app:layout_constraintBottom_toBottomOf="@+id/tvEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:gravity="start"
        android:textStyle="bold"
        android:text="@string/firstname"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/tvLastName"
        app:layout_constraintStart_toEndOf="@+id/ivPerson"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:gravity="start"
        android:textStyle="bold"
        android:text="@string/lastname"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/tvAge"
        app:layout_constraintStart_toEndOf="@+id/tvFirstName"
        app:layout_constraintTop_toTopOf="@id/tvFirstName"
        app:layout_goneMarginStart="8dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        android:gravity="end"
        android:text="@string/age"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvLastName"
        app:layout_constraintTop_toTopOf="@id/tvFirstName"
        app:layout_goneMarginStart="8dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:text="@string/email"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/ivPerson"
        app:layout_constraintTop_toBottomOf="@id/tvFirstName"
        app:layout_goneMarginStart="8dp" />

</androidx.constraintlayout.widget.ConstraintLayout>